# nd-wordlist-tools

./: .gitignore  .pre-commit-config.yaml  nd_interpose.py  nd_num2symbols.py  pyproject.toml
.github/: copilot-instructions.md
demo/: casedWordPairs.txt  pairs.txt
src/nd_wordlist_tools/: io_helpers.py  logging_setup.py  nd_caps.py  nd_permute.py  ndcase.py  ndcombine.py  ndfillgen.py  ndfillgen2.py  ndpermute.py
src/nd_wordlist_tools/docs/: nd_num2symbols.md
