[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nd-wordlist-tools"
version = "0.1.0"
description = "Wordlist tools to generate convoluted, rules based passwords"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nick DeMarco" }
]
dependencies = ["click>=8.0",
                "typer>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0"
]

[project.scripts]
ndcase = "nd_wordlist_tools.ndcase:main"
ndcombine = "nd_wordlist_tools.ndcombine:main"
ndfillgen = "nd_wordlist_tools.ndfillgen:main"
ndpermute = "nd_wordlist_tools.ndpermute:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nd_wordlist_tools"]
